fix: responsive layout on smaller screens

--- a/src/components/game.css
+++ b/src/components/game.css
@@ -14,7 +14,6 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  height: 100%;
   max-height: 80%;
   width: 100%;
   padding: 2%;
@@ -32,7 +31,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
   padding: 2rem 0;
   gap: 0.5rem;
 }
@@ -257,7 +255,6 @@ button.learn-more:active::before {
 
   .styleDash .resultScore{
     gap: 0;
-    max-width: 1rem;
   }
 
 }
